--- a/module1/index.html
+++ b/module1/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
-    <div class="container" ng-controller="LunchInputController">
+    <div class="container" ng-controller="LunchCheckController">
       <h1>Lunch Checker</h1>
       <div class="form-group">
         <input id="lunch-menu"
