--- a/module2/index.html
+++ b/module2/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Shopping List Check Off</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/master.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/master.css">
   </head>
   <body ng-app="ShoppingListCheckOff">
     <div class="container">
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/scripts/angular.min.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/angular.min.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
   </body>
 </html>
